test/parsing/errors/invalidIndexExpr.chpl
for i.x in [1..5] do {
  writeln("asdf");
}
